--- a/DZ_WPF_Base/MainWindow.xaml
+++ b/DZ_WPF_Base/MainWindow.xaml
@@ -5,12 +5,74 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DZ_WPF_Base"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="800">
     <Grid>
         <TextBox x:Name="Textlog"></TextBox>
         <TabControl>
             <TabItem Header="Equipment" x:Name="Rat">
-                <TextBox x:Name="EqTextBlock"></TextBox>
+                <Border Background="GhostWhite" BorderBrush="Black" BorderThickness="1">
+                    <StackPanel>
+                        <GroupBox Header="Данные"
+                                  HorizontalAlignment="Center"
+                                  VerticalAlignment="Center"
+                                  Margin="10"
+                                  Width="750"
+                                  FontSize="25">
+                            <StackPanel Margin="5">
+                                <Grid Margin="10 10 10 0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="40"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="17"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <Label FontSize="16" Grid.Column="0" BorderBrush="Red"  BorderThickness="2 2 0 2">ID</Label>
+                                    <Label FontSize="16" Grid.Column="1" BorderBrush="Red"  BorderThickness="2 2 0 2">Производитель</Label>
+                                    <Label FontSize="16" Grid.Column="2" BorderBrush="Red" BorderThickness="2 2 0 2">Модель</Label>
+                                    <Label FontSize="16" Grid.Column="3" BorderBrush="Red" BorderThickness="2 2 2 2">Адрес</Label>
+                                </Grid>
+                                <Border Background="GhostWhite" BorderBrush="Black" BorderThickness="1" Margin="10">
+                                    <ScrollViewer FontSize="12" CanContentScroll="True" Height="150" BorderBrush="Black" BorderThickness="1">
+                                        <StackPanel x:Name="EquipStack" Orientation="Vertical"></StackPanel>
+                                    </ScrollViewer>
+                                </Border>
+                            </StackPanel>
+                        </GroupBox>
+
+                        <GroupBox Header="Внести данные в базу"
+                                  HorizontalAlignment="Center"
+                                  VerticalAlignment="Center"
+                                  Margin="10"
+                                  Width="750"
+                                  FontSize="25">
+                            <StackPanel Margin="5">
+                                <Grid Margin="50 10 27 0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition></RowDefinition>
+                                        <RowDefinition></RowDefinition>
+                                    </Grid.RowDefinitions>
+                                    <Label FontSize="16" Grid.Column="0" BorderBrush="Red"  BorderThickness="2 2 0 2">Производитель</Label>
+                                    <Label FontSize="16" Grid.Column="1" BorderBrush="Red" BorderThickness="2 2 0 2">Модель</Label>
+                                    <Label FontSize="16" Grid.Column="2" BorderBrush="Red" BorderThickness="2 2 2 2">Адрес</Label>
+                                    <ComboBox Margin="0 10 0 0" FontSize="12" x:Name="MunCombo" Grid.Column="0" Grid.Row="1"></ComboBox>
+                                    <ComboBox Margin="0 10 0 0" FontSize="12" x:Name="ModCombo" Grid.Column="1" Grid.Row="1"></ComboBox>
+                                    <ComboBox Margin="0 10 0 0" FontSize="12" x:Name="AdrCombo" Grid.Column="2" Grid.Row="1"></ComboBox>
+                                </Grid>
+                                <Button Margin="50 10 10 10" 
+                                        HorizontalAlignment="Left"
+                                        FontSize="16"
+                                        x:Name="EqupButton"
+                                        Click="EqupButton_Click">Записать</Button>
+                            </StackPanel>
+                        </GroupBox>
+                    </StackPanel>
+                </Border>
             </TabItem>
             <TabItem Header="Manufacturer">
                 
@@ -21,3 +83,8 @@
         </TabControl>
     </Grid>
 </Window>
+
+<!--
+        public string ManufacturerName { get; set; } //Имя производителя
+        public string ModelName { get; set; } //Имя модели
+        public string strLocationName { get; set; } //Название улицы-->
