--- a/DZ_WPF_Base/MainWindow.xaml
+++ b/DZ_WPF_Base/MainWindow.xaml
@@ -60,7 +60,8 @@
                                     <Label FontSize="16" Grid.Column="0" BorderBrush="Red"  BorderThickness="2 2 0 2">Производитель</Label>
                                     <Label FontSize="16" Grid.Column="1" BorderBrush="Red" BorderThickness="2 2 0 2">Модель</Label>
                                     <Label FontSize="16" Grid.Column="2" BorderBrush="Red" BorderThickness="2 2 2 2">Адрес</Label>
-                                    <ComboBox Margin="0 10 0 0" FontSize="12" x:Name="MunCombo" Grid.Column="0" Grid.Row="1"></ComboBox>
+                                    <ComboBox Margin="0 10 0 0" FontSize="12" x:Name="MunCombo" Grid.Column="0" Grid.Row="1"
+                                              SelectionChanged="MunCombo_SelectionChanged"></ComboBox>
                                     <ComboBox Margin="0 10 0 0" FontSize="12" x:Name="ModCombo" Grid.Column="1" Grid.Row="1"></ComboBox>
                                     <ComboBox Margin="0 10 0 0" FontSize="12" x:Name="AdrCombo" Grid.Column="2" Grid.Row="1"></ComboBox>
                                 </Grid>
